# palco

./: .clangd  .gitignore  CMakeLists.txt  Cargo.toml  RESOURCES.md  build.zig  build.zig.zon
.zig-cache/o/41e1459ec1f18b20024cfc63a3126f25/: libraw.zig
assets/example_images/: IMG_1558.CR3.xmp  IMG_1559.CR3.xmp  IMG_1560.CR3.xmp  IMG_1561.CR3.xmp  IMG_1562.CR3.xmp  IMG_8117.CR2.xmp
include/: demosaic.h  exceptions.hpp  filesystem.hpp  image_data.h  read_raw.hpp
palco/src-tauri/: Cargo.toml  tauri.conf.json
palco/src-tauri/src/: main.rs
src/: demosaic.c  exceptions.cpp  filesystem.cpp  read_raw.cpp  root.zig
tests/: CMakeLists.txt  glad.c  test_main.cpp  test_utils.cpp  test_utils.hpp
tests/glad/: glad.h
tests/unit/: test_demosaic.cpp  test_filesystem.cpp  test_read_raw.cpp
